--- a/app/src/main/res/layout/list_item_exercise.xml
+++ b/app/src/main/res/layout/list_item_exercise.xml
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="4"
+        app:exerciseText="@{exercise}"
         android:text="@string/exercise_text" />
 
         <ImageView
