--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -55,6 +55,9 @@
             app:popExitAnim="@anim/slide_out_right"
             app:popUpTo="@+id/navigation"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_splashScreenFragment_to_firebaseLogin"
+            app:destination="@id/firebaseLogin" />
     </fragment>
     <fragment
         android:id="@+id/createClassroomFragment"
@@ -92,5 +95,13 @@
         <argument
             android:name="taskId"
             app:argType="long" />
+    </fragment>
+    <fragment
+        android:id="@+id/firebaseLogin"
+        android:name="com.example.progresee.views.FirebaseLogin"
+        android:label="FirebaseLogin" >
+        <action
+            android:id="@+id/action_firebaseLogin_to_classroomFragment"
+            app:destination="@id/classroomFragment" />
     </fragment>
 </navigation>
