--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -41,6 +41,9 @@
             app:destination="@id/taskFragment"
             app:enterAnim="@anim/slide_in_left"
             app:popEnterAnim="@anim/slide_in_right" />
+        <action
+            android:id="@+id/action_classroomFragment_to_firebaseLogin"
+            app:destination="@id/firebaseLogin" />
     </fragment>
     <fragment
         android:id="@+id/splashScreenFragment"
@@ -57,7 +60,9 @@
             app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_splashScreenFragment_to_firebaseLogin"
-            app:destination="@id/firebaseLogin" />
+            app:destination="@id/firebaseLogin"
+            app:popUpTo="@+id/navigation"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/createClassroomFragment"
