--- a/app/src/main/res/layout/fragment_create_classroom.xml
+++ b/app/src/main/res/layout/fragment_create_classroom.xml
@@ -23,8 +23,8 @@
             android:id="@+id/create_classroom_title"
             android:layout_width="276dp"
             android:layout_height="37dp"
-            android:gravity="center"
             android:layout_marginTop="32dp"
+            android:gravity="center"
             android:text="@string/create_classroom_title"
             android:textColor="@android:color/black"
             android:textSize="20sp"
@@ -51,6 +51,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/create_classroom_title"
             app:layout_constraintVertical_bias="0.0" />
+
+        <include
+            android:id="@+id/layout_progress_bar"
+            layout="@layout/progress_bar_layout"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <Button
